<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirma_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="castro.ricardo.com.datosusuario.ConfirmaDatos">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/confirma_datos"
            android:textSize="@dimen/tamano_textview_titulo"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/tvNombreCompletoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/nombre_usuario_confirmar"
            android:textSize="@dimen/tamano_textview_cuerpo"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_entre_textview">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/fecha_nacimiento_confirmar"
                android:textSize="@dimen/tamano_textview_cuerpo"
                android:textStyle="bold"
                android:gravity="center_vertical"
                />

            <TextView
                android:id="@+id/tvFechaNacimientoUsuario"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/padding_left"
                android:textSize="@dimen/tamano_textview_cuerpo"
                android:text=""

                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_entre_textview">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/telefono_confirmar"
                android:textStyle="bold"
                android:textSize="@dimen/tamano_textview_cuerpo"

                />

            <TextView
                android:id="@+id/tvTelefonoUsuario"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/padding_left"
                android:textSize="@dimen/tamano_textview_cuerpo"
                android:text=""/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_entre_textview">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/email_confirmar"
                android:textStyle="bold"
                android:textSize="@dimen/tamano_textview_cuerpo"

                />

            <TextView
                android:id="@+id/tvEmailUsuario"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/padding_left"
                android:textSize="@dimen/tamano_textview_cuerpo"
                android:text=""/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_entre_textview">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/descripcion_contacto_confirmar"
                android:textStyle="bold"
                android:textSize="@dimen/tamano_textview_cuerpo"


                />

            <TextView
                android:id="@+id/tvDescripcionUsuario"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/padding_left"
                android:text=""
                android:textSize="@dimen/tamano_textview_cuerpo"


                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnEditar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tamano_boton"
                android:layout_marginTop="@dimen/padding_top"
                android:text="@string/editar"
                android:textAllCaps="false"
                android:textSize="@dimen/tamano_texto_boton" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
